Use valueOf instead of object constructors.  Findbugs says it's more efficient.